# QtPiDeck

./: CMakeLists.txt  QtPiDeck.pro  QtPiDeck_en_US.ts  README.md  cpp.hint  icons.qrc  main.cpp  main.qml
.github/workflows/: qmake.yml  run-tests.yml
QtPiDeck/: CMakeLists.txt  QtPiDeck.pro  connectionsettings.cpp  connectionsettings.h  main.cpp
QtPiDeck/QtPiDeck/: CMakeLists.txt
QtPiDeck/QtPiDeck/include/: AppStartup.hpp
QtPiDeck/QtPiDeck/include/Models/: AppConfiguration.hpp
QtPiDeck/QtPiDeck/qml/pages/: main.qml
QtPiDeck/QtPiDeck/src/: AppStartup.cpp  DataManager.cpp  main.cpp
QtPiDeck/QtPiDeckLib/: CMakeLists.txt
QtPiDeck/QtPiDeckLib/include/: ClientApplication.hpp
QtPiDeck/QtPiDeckLib/include/Network/: BaseDeckClient.hpp  DeckClient.hpp  TestDeckClient.hpp
QtPiDeck/QtPiDeckLib/include/Services/: IClientSettingsStorage.hpp  SettingsStorage.hpp
QtPiDeck/QtPiDeckLib/include/ViewModels/: SettingsViewModel.hpp
QtPiDeck/QtPiDeckLib/qml/pages/: main.qml
QtPiDeck/QtPiDeckLib/src/: ClientApplication.cpp
QtPiDeck/QtPiDeckLib/src/Network/: BaseDeckClient.cpp  DeckClient.cpp  TestDeckClient.cpp
QtPiDeck/QtPiDeckLib/src/Services/: SettingsStorage.cpp
QtPiDeck/QtPiDeckLib/src/ViewModels/: SettingsViewModel.cpp
QtPiDeck/include/: DataManager.hpp  Utils.hpp
QtPiDeck/include/Models/: AppConfiguration.hpp
QtPiDeck/qml/pages/: main.qml
QtPiDeck/src/: AppStartup.cpp  DataManager.cpp  main.cpp
QtPiDeck/src/Models/: AppConfiguration.cpp  appconfiguration.cpp
Tests/: CMakeLists.txt
Tests/QtPiDeck/ViewModels/SettingsViewModelTests/: main.cpp
Tests/QtPiDeckCodeTests/: CMakeLists.txt
Tests/QtPiDeckCodeTests/src/ViewModels/: SettingsViewModelTests.cpp
icons/: generate.sh
icons/maintheme/: index.theme
